# claude-code

./: .gitignore  .last-cleanup  CLAUDE.md  README.md  projects  settings.json
agent-memory/code-reviewer/: MEMORY.md  role_and_pipeline.md
agent-memory/debugger/: MEMORY.md
agents/: cleanup-code.md  cleanup.md  code-cleanup.md  code-refactor.md  code-review.md  code-reviewer.md  debugger.md  refactor-code.md  refactor.md  research-code.md  research.md  review-code.md  review.md  security-audit.md
commands/: git.md  memo.md
commands/git/: commit.md  update.md
commands/memo/: update.md
commands/user/: analyze-library.md  codebase-pipeline.md  function-test.md  generate-readme.md  live-test.md  review-best-practices.md  review-structure.md  suggest-tests.md
docs/: index.md  python-style.md
docs/python/: async.md  docstrings.md  error-handling.md  frameworks.md  performance.md  style-core.md  testing.md  typing.md  version.md
docs/tooling/: docker-management.md  package-management.md
hooks/: advise_threading.py  approve-cmd.py  audit_logger.py  block-websearch.sh  block_secrets.py  format-after-edit.sh  format-code.js  format_code.py  format_python.py  prettier-after-edit.sh  protect-secrets.js  ruff-after-edit.sh  statusline.sh
rules/: MEMO.md  README.md  authority.md  core_principles.md  docs.md  engineering_lifecycle.md  escalation.md  failure_handling.md  git.md  git_rules.md  memo.md  output_structure.md  python-style.md  python-testing.md  python.md  python_tools.md  security.md  templates.md  testing.md  testing_rules.md  web_search.md
skills/agnes-image/: SKILL.md
skills/agnes-image/references/: examples.md
skills/agnes-video/: SKILL.md
skills/agnes-video/references/: examples.md  parameters.md
skills/blog-expert/: SKILL.md
skills/blog-seo/: SKILL.md
skills/cleanup-code/: SKILL.md
skills/cleanup-code/references/: passes.md  reporting.md
skills/code-cleanup/: SKILL.md
skills/code-refactor/: SKILL.md
skills/code-review/: SKILL.md
skills/ddg-search/: SKILL.md
skills/debug-code/: SKILL.md
skills/deep-research/: SKILL.md
skills/docker-expert/: SKILL.md
skills/dry-code/: SKILL.md
skills/kiss-code/: SKILL.md
skills/mcp-builder/reference/: evaluation.md  mcp_best_practices.md  node_mcp_server.md  python_mcp_server.md
skills/mcp-builder/scripts/: connections.py  evaluation.py  example_evaluation.xml  (+1 more)
skills/memory-keeper/: SKILL.md
skills/obsidian-lint/: SKILL.md
skills/python-pro/: SKILL.md
skills/python-testing/: SKILL.md
skills/refactor-code/: SKILL.md
skills/repomix/: SKILL.md
skills/review-code/: SKILL.md
skills/test-code/: SKILL.md
skills/yagni-code/: SKILL.md
templates/: Dockerfile.python  ci-python.yml  github-actions-ci.md  pre-commit-config.md  pre-commit-config.yaml  pyproject-toml.md  pyproject.toml  readme-structure.md
(+11 files in other folders)
